--- a/python/abstracts/abstracts_general.ipynb
+++ b/python/abstracts/abstracts_general.ipynb
@@ -82,6 +82,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338, 'recall_1000': 0.6139}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_run_params = running.get_default_run_params()\n",
+    "full_run_params['query_template'] = 'baseline.json'\n",
+    "full_run_df, full_run_params = running.run(topics_all)\n",
+    "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
+    "aggregated\n",
+    "#assert(aggregated['ndcg'] == 0.5338)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -89,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 30 {'gene_boost': 1, 'disease_boost': 1.5, 'query_template': 'baseline.json', 'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5}\n"
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
      ]
     },
     {
@@ -104,9 +136,9 @@
     }
    ],
    "source": [
-    "params = running.get_default_params()\n",
-    "params['query_template'] = 'baseline.json'\n",
-    "full_run_df, params = running.run(topics_all)\n",
+    "run_params = running.get_default_run_params()\n",
+    "run_params['query_template'] = 'baseline2.json'\n",
+    "full_run_df, run_params = running.run(topics_all)\n",
     "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
     "aggregated\n",
     "#assert(aggregated['ndcg'] == 0.5338)"
@@ -115,38 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUN: FIXME TOPICS: 30 {'gene_boost': 1, 'disease_boost': 1.5, 'query_template': 'baseline2.json', 'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338, 'recall_1000': 0.6139}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "params = running.get_default_params()\n",
-    "params['query_template'] = 'baseline2.json'\n",
-    "full_run_df, params = running.run(topics_all)\n",
-    "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
-    "aggregated\n",
-    "#assert(aggregated['ndcg'] == 0.5338)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 12 {'gene_boost': 1, 'disease_boost': 1.5, 'query_template': 'baseline2.json', 'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5}\n"
+      "RUN: FIXME TOPICS: 12 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,14 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 9 {'gene_boost': 1, 'disease_boost': 1.5, 'query_template': 'baseline2.json', 'disease_tie_breaker': 0.5, 'gene_tie_breaker': 0.5}\n"
+      "RUN: FIXME TOPICS: 9 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
      ]
     }
    ],
@@ -206,20 +206,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "P_10           0.6000\n",
-       "Rprec          0.3020\n",
-       "ndcg           0.5543\n",
-       "recall_1000    0.5861\n",
+       "P_10           0.5917\n",
+       "Rprec          0.2626\n",
+       "ndcg           0.5026\n",
+       "recall_1000    0.4999\n",
        "Name: training (12 topics), dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -273,17 +273,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>training (12 topics)</th>\n",
-       "      <td>0.6000</td>\n",
-       "      <td>0.3020</td>\n",
-       "      <td>0.5543</td>\n",
-       "      <td>0.5861</td>\n",
+       "      <td>0.5917</td>\n",
+       "      <td>0.2626</td>\n",
+       "      <td>0.5026</td>\n",
+       "      <td>0.4999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test (9 topics)</th>\n",
-       "      <td>0.4111</td>\n",
-       "      <td>0.2525</td>\n",
-       "      <td>0.5192</td>\n",
-       "      <td>0.6361</td>\n",
+       "      <td>0.4444</td>\n",
+       "      <td>0.3171</td>\n",
+       "      <td>0.5561</td>\n",
+       "      <td>0.6852</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -291,11 +291,11 @@
       ],
       "text/plain": [
        "                        P_10   Rprec    ndcg  recall_1000\n",
-       "training (12 topics)  0.6000  0.3020  0.5543       0.5861\n",
-       "test (9 topics)       0.4111  0.2525  0.5192       0.6361"
+       "training (12 topics)  0.5917  0.2626  0.5026       0.4999\n",
+       "test (9 topics)       0.4444  0.3171  0.5561       0.6852"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,11 +306,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#eval.experiment(topics_df, qrels)"
+    "results, aggregated = evaluation.evaluate(qrels_all, abcd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gene_tie_breaker': [0.1, 0.5], 'disease_tie_breaker': [0.1, 0.5], 'query_template': ['variable.json'], 'gene_boost': [1, 2, 5], 'disease_boost': [1, 2, 5]}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
+      "{'P_10': 0.3067, 'Rprec': 0.1952, 'ndcg': 0.4139, 'recall_1000': 0.5343}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
+      "{'P_10': 0.3033, 'Rprec': 0.1852, 'ndcg': 0.4003, 'recall_1000': 0.5224}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
+      "{'P_10': 0.2933, 'Rprec': 0.181, 'ndcg': 0.3936, 'recall_1000': 0.5175}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
+      "{'P_10': 0.3, 'Rprec': 0.1853, 'ndcg': 0.3968, 'recall_1000': 0.5188}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
+      "{'P_10': 0.29, 'Rprec': 0.1804, 'ndcg': 0.389, 'recall_1000': 0.5126}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
+      "{'P_10': 0.28, 'Rprec': 0.179, 'ndcg': 0.3843, 'recall_1000': 0.5083}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
+      "{'P_10': 0.3067, 'Rprec': 0.1952, 'ndcg': 0.4139, 'recall_1000': 0.5343}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
+      "{'P_10': 0.3033, 'Rprec': 0.1852, 'ndcg': 0.4003, 'recall_1000': 0.5224}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
+      "{'P_10': 0.2933, 'Rprec': 0.181, 'ndcg': 0.3936, 'recall_1000': 0.5175}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
+      "{'P_10': 0.3, 'Rprec': 0.1853, 'ndcg': 0.3968, 'recall_1000': 0.5188}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
+      "{'P_10': 0.29, 'Rprec': 0.1804, 'ndcg': 0.389, 'recall_1000': 0.5126}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
+      "{'P_10': 0.28, 'Rprec': 0.179, 'ndcg': 0.3843, 'recall_1000': 0.5083}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
+      "{'P_10': 0.3067, 'Rprec': 0.1952, 'ndcg': 0.4139, 'recall_1000': 0.5343}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
+      "{'P_10': 0.3033, 'Rprec': 0.1852, 'ndcg': 0.4003, 'recall_1000': 0.5224}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
+      "{'P_10': 0.2933, 'Rprec': 0.181, 'ndcg': 0.3936, 'recall_1000': 0.5175}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
+      "{'P_10': 0.3, 'Rprec': 0.1853, 'ndcg': 0.3968, 'recall_1000': 0.5188}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
+      "{'P_10': 0.29, 'Rprec': 0.1804, 'ndcg': 0.389, 'recall_1000': 0.5126}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
+      "{'P_10': 0.28, 'Rprec': 0.179, 'ndcg': 0.3843, 'recall_1000': 0.5083}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
+      "{'P_10': 0.4533, 'Rprec': 0.2568, 'ndcg': 0.5154, 'recall_1000': 0.6047}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
+      "{'P_10': 0.4233, 'Rprec': 0.2306, 'ndcg': 0.4712, 'recall_1000': 0.5746}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
+      "{'P_10': 0.33, 'Rprec': 0.201, 'ndcg': 0.427, 'recall_1000': 0.5438}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
+      "{'P_10': 0.4067, 'Rprec': 0.241, 'ndcg': 0.482, 'recall_1000': 0.5861}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
+      "{'P_10': 0.3533, 'Rprec': 0.2113, 'ndcg': 0.4425, 'recall_1000': 0.5531}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
+      "{'P_10': 0.31, 'Rprec': 0.1892, 'ndcg': 0.4083, 'recall_1000': 0.5268}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
+      "{'P_10': 0.4533, 'Rprec': 0.2568, 'ndcg': 0.5154, 'recall_1000': 0.6047}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
+      "{'P_10': 0.4233, 'Rprec': 0.2306, 'ndcg': 0.4712, 'recall_1000': 0.5746}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
+      "{'P_10': 0.33, 'Rprec': 0.201, 'ndcg': 0.427, 'recall_1000': 0.5438}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
+      "{'P_10': 0.4067, 'Rprec': 0.241, 'ndcg': 0.482, 'recall_1000': 0.5861}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
+      "{'P_10': 0.3533, 'Rprec': 0.2113, 'ndcg': 0.4425, 'recall_1000': 0.5531}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
+      "{'P_10': 0.31, 'Rprec': 0.1892, 'ndcg': 0.4083, 'recall_1000': 0.5268}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
+      "{'P_10': 0.4533, 'Rprec': 0.2568, 'ndcg': 0.5154, 'recall_1000': 0.6047}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
+      "{'P_10': 0.4233, 'Rprec': 0.2306, 'ndcg': 0.4712, 'recall_1000': 0.5746}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
+      "{'P_10': 0.33, 'Rprec': 0.201, 'ndcg': 0.427, 'recall_1000': 0.5438}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
+      "{'P_10': 0.4067, 'Rprec': 0.241, 'ndcg': 0.482, 'recall_1000': 0.5861}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
+      "{'P_10': 0.3533, 'Rprec': 0.2113, 'ndcg': 0.4425, 'recall_1000': 0.5531}\n",
+      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
+      "{'P_10': 0.31, 'Rprec': 0.1892, 'ndcg': 0.4083, 'recall_1000': 0.5268}\n"
+     ]
+    }
+   ],
+   "source": [
+    "running.experiment(topics_all, qrels_all)"
    ]
   }
  ],
