improved templates, added sex and age groups

--- a/python/abstracts/abstracts_general.ipynb
+++ b/python/abstracts/abstracts_general.ipynb
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
+      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json'}\n"
      ]
     },
     {
@@ -121,13 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
+      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline_sex_age.json'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338, 'recall_1000': 0.6139}"
+       "{'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}"
       ]
      },
      "execution_count": 7,
@@ -137,11 +137,49 @@
    ],
    "source": [
     "run_params = running.get_default_run_params()\n",
-    "run_params['query_template'] = 'baseline2.json'\n",
+    "run_params['query_template'] = 'baseline_sex_age.json'\n",
     "full_run_df, run_params = running.run(topics_all)\n",
     "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
     "aggregated\n",
-    "#assert(aggregated['ndcg'] == 0.5338)"
+    "# Only MeSH, best fields: {'P_10': 0.5167, 'Rprec': 0.2785, 'ndcg': 0.5383, 'recall_1000': 0.6148}\n",
+    "# Only MeSH, best, cross: {'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173} ***** best ndcg, best P_10\n",
+    "# Only MeSH, cross fields: {'P_10': 0.5067, 'Rprec': 0.2811, 'ndcg': 0.5413, 'recall_1000': 0.6159}\n",
+    "# Only MeSH, cross, best: {'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline_sex_age_all_fields.json'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'P_10': 0.52, 'Rprec': 0.278, 'ndcg': 0.5416, 'recall_1000': 0.6174}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_params = running.get_default_run_params()\n",
+    "run_params['query_template'] = 'baseline_sex_age_all_fields.json'\n",
+    "full_run_df, run_params = running.run(topics_all)\n",
+    "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
+    "aggregated\n",
+    "# All fields, best fields: {'P_10': 0.51, 'Rprec': 0.2744, 'ndcg': 0.5396, 'recall_1000': 0.6143}\n",
+    "# All fields, cross fields: {'P_10': 0.5067, 'Rprec': 0.281, 'ndcg': 0.5412, 'recall_1000': 0.6157}\n",
+    "# All fields, best fields disease, cross fields rest: {'P_10': 0.52, 'Rprec': 0.278, 'ndcg': 0.5416, 'recall_1000': 0.6174} ***** best ndcg, best P_10\n",
+    "# All fields, best fields disease, gene, cross fields rest: {'P_10': 0.5167, 'Rprec': 0.276, 'ndcg': 0.5378, 'recall_1000': 0.6139}"
    ]
   },
   {
@@ -169,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 12 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
+      "RUN: FIXME TOPICS: 12 {'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5}\n"
      ]
     }
    ],
@@ -196,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 9 {'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5}\n"
+      "RUN: FIXME TOPICS: 9 {'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5}\n"
      ]
     }
    ],
@@ -212,10 +250,10 @@
     {
      "data": {
       "text/plain": [
-       "P_10           0.5917\n",
-       "Rprec          0.2626\n",
-       "ndcg           0.5026\n",
-       "recall_1000    0.4999\n",
+       "P_10           0.4667\n",
+       "Rprec          0.3072\n",
+       "ndcg           0.5594\n",
+       "recall_1000    0.6922\n",
        "Name: training (12 topics), dtype: float64"
       ]
      },
