--- a/python/abstracts/abstracts_recall_test.ipynb
+++ b/python/abstracts/abstracts_recall_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,6 +86,7 @@
        "      <th>gene3</th>\n",
        "      <th>sex</th>\n",
        "      <th>age</th>\n",
+       "      <th>age_group</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -99,6 +100,7 @@
        "      <td></td>\n",
        "      <td>male</td>\n",
        "      <td>52</td>\n",
+       "      <td>aged</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -108,11 +110,11 @@
        "   topic       disease                       gene        gene1          gene2  \\\n",
        "2      2  Colon cancer  KRAS (G13D), BRAF (V600E)  KRAS (G13D)   BRAF (V600E)   \n",
        "\n",
-       "  gene3   sex age  \n",
-       "2        male  52  "
+       "  gene3   sex age age_group  \n",
+       "2        male  52      aged  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 1 {'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json'}\n",
-      "RUN: FIXME TOPICS: 1 {'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'topic-optimized.json'}\n"
+      "RUN: FIXME TOPICS: 1 {'query_template': 'baseline.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n",
+      "RUN: FIXME TOPICS: 1 {'query_template': 'topic-optimized.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n"
      ]
     },
     {
@@ -142,7 +144,7 @@
        "{'P_10': 0.9, 'Rprec': 0.4231, 'ndcg': 0.7551, 'recall_1000': 0.8205}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,15 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 1 {'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'topic-optimized.json'}\n",
-      "RUN: FIXME TOPICS: 1 {'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'topic-optimized2.json'}\n"
+      "RUN: FIXME TOPICS: 1 {'query_template': 'topic-optimized.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n",
+      "RUN: FIXME TOPICS: 1 {'query_template': 'topic-optimized2.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n"
      ]
     },
     {
@@ -174,7 +176,7 @@
        "{'P_10': 0.9, 'Rprec': 0.4231, 'ndcg': 0.7231, 'recall_1000': 0.7692}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +239,7 @@
        " 'ASCO_32653-65'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,6 +249,13 @@
     "qrels_set = set(qrels[(qrels.relev.isin([2]))].doc_id)\n",
     "qrels_set.difference(run_set)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
