--- a/python/abstracts/abstracts_general.ipynb
+++ b/python/abstracts/abstracts_general.ipynb
@@ -56,7 +56,8 @@
    "outputs": [],
    "source": [
     "topics_all = utils.get_topics('./topics/topics2017.xml')\n",
-    "qrels_all = utils.get_qrels('./gold-standard/abstracts.2017.qrels')"
+    "qrels_all = utils.get_qrels('./gold-standard/abstracts.2017.qrels')\n",
+    "#topics_all"
    ]
   },
   {
@@ -81,6 +82,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiment and do grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PARAMS GRID: {'disease_tie_breaker': [1], 'query_template': ['variable.json'], 'gene_tie_breaker': [1], 'gene_boost': [1, 2], 'disease_boost': [1]}\n",
+      "RUN: variable.json-1-1-1-1 TOPICS: 30 {'disease_tie_breaker': '1', 'run_id': 'variable.json-1-1-1-1', 'gene_tie_breaker': '1', 'disease_boost': '1', 'query_template': 'variable.json', 'gene_boost': '1'}\n",
+      "(0.5057, 0.45, 0.2674, '1', '1', '1', '1')\n",
+      "RUN: variable.json-1-1-1-2 TOPICS: 30 {'disease_tie_breaker': '1', 'run_id': 'variable.json-1-1-1-2', 'gene_tie_breaker': '1', 'disease_boost': '1', 'query_template': 'variable.json', 'gene_boost': '2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = running.experiment(topics_all, qrels_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example runs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -89,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline.json'}\n"
+      "RUN: DEFAULT_RUN TOPICS: 30 {'run_id': 'DEFAULT_RUN', 'gene_tie_breaker': 0.5, 'gene_boost': 1, 'query_template': 'baseline.json', 'disease_tie_breaker': 0.5, 'disease_boost': 1.5}\n"
      ]
     },
     {
@@ -109,19 +153,20 @@
     "full_run_df, full_run_params = running.run(topics_all)\n",
     "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
     "aggregated\n",
-    "#assert(aggregated['ndcg'] == 0.5338)"
+    "#assert(aggregated['ndcg'] == 0.5338)\n",
+    "#{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338, 'recall_1000': 0.6139}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline_sex_age.json'}\n"
+      "RUN: DEFAULT_RUN TOPICS: 30 {'run_id': 'DEFAULT_RUN', 'gene_tie_breaker': 0.5, 'gene_boost': 1, 'query_template': 'baseline_sex_age.json', 'disease_tie_breaker': 0.5, 'disease_boost': 1.5}\n"
      ]
     },
     {
@@ -130,7 +175,7 @@
        "{'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,21 +187,21 @@
     "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
     "aggregated\n",
     "# Only MeSH, best fields: {'P_10': 0.5167, 'Rprec': 0.2785, 'ndcg': 0.5383, 'recall_1000': 0.6148}\n",
-    "# Only MeSH, best, cross: {'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173} ***** best ndcg, best P_10\n",
     "# Only MeSH, cross fields: {'P_10': 0.5067, 'Rprec': 0.2811, 'ndcg': 0.5413, 'recall_1000': 0.6159}\n",
-    "# Only MeSH, cross, best: {'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}"
+    "# Only MeSH, cross, best: {'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}\n",
+    "# Only MeSH, best, cross: {'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173} ***** best ndcg, best P_10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 30 {'disease_boost': 1.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'query_template': 'baseline_sex_age_all_fields.json'}\n"
+      "RUN: DEFAULT_RUN TOPICS: 30 {'run_id': 'DEFAULT_RUN', 'gene_tie_breaker': 0.5, 'gene_boost': 1, 'query_template': 'baseline_sex_age_all_fields.json', 'disease_tie_breaker': 0.5, 'disease_boost': 1.5}\n"
      ]
     },
     {
@@ -165,7 +210,7 @@
        "{'P_10': 0.52, 'Rprec': 0.278, 'ndcg': 0.5416, 'recall_1000': 0.6174}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,13 +223,13 @@
     "aggregated\n",
     "# All fields, best fields: {'P_10': 0.51, 'Rprec': 0.2744, 'ndcg': 0.5396, 'recall_1000': 0.6143}\n",
     "# All fields, cross fields: {'P_10': 0.5067, 'Rprec': 0.281, 'ndcg': 0.5412, 'recall_1000': 0.6157}\n",
-    "# All fields, best fields disease, cross fields rest: {'P_10': 0.52, 'Rprec': 0.278, 'ndcg': 0.5416, 'recall_1000': 0.6174} ***** best ndcg, best P_10\n",
-    "# All fields, best fields disease, gene, cross fields rest: {'P_10': 0.5167, 'Rprec': 0.276, 'ndcg': 0.5378, 'recall_1000': 0.6139}"
+    "# All fields, best fields disease, gene, cross fields rest: {'P_10': 0.5167, 'Rprec': 0.276, 'ndcg': 0.5378, 'recall_1000': 0.6139}\n",
+    "# All fields, best fields disease, cross fields rest: {'P_10': 0.52, 'Rprec': 0.278, 'ndcg': 0.5416, 'recall_1000': 0.6174} ***** best ndcg, best P_10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 12 {'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5}\n"
+      "RUN: DEFAULT_RUN TOPICS: 12 {'run_id': 'DEFAULT_RUN', 'disease_tie_breaker': 0.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5}\n"
      ]
     }
    ],
@@ -217,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 9 {'disease_tie_breaker': 0.5, 'query_template': 'baseline2.json', 'gene_boost': 1, 'disease_boost': 1.5, 'gene_tie_breaker': 0.5}\n"
+      "RUN: DEFAULT_RUN TOPICS: 9 {'run_id': 'DEFAULT_RUN', 'disease_tie_breaker': 0.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5}\n"
      ]
     }
    ],
@@ -244,20 +289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "P_10           0.4667\n",
-       "Rprec          0.3072\n",
-       "ndcg           0.5594\n",
-       "recall_1000    0.6922\n",
+       "P_10           0.4333\n",
+       "Rprec          0.2810\n",
+       "ndcg           0.5383\n",
+       "recall_1000    0.6650\n",
        "Name: training (12 topics), dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -311,17 +356,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>training (12 topics)</th>\n",
-       "      <td>0.5917</td>\n",
-       "      <td>0.2626</td>\n",
-       "      <td>0.5026</td>\n",
-       "      <td>0.4999</td>\n",
+       "      <td>0.4333</td>\n",
+       "      <td>0.2810</td>\n",
+       "      <td>0.5383</td>\n",
+       "      <td>0.6650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test (9 topics)</th>\n",
-       "      <td>0.4444</td>\n",
-       "      <td>0.3171</td>\n",
-       "      <td>0.5561</td>\n",
-       "      <td>0.6852</td>\n",
+       "      <td>0.3556</td>\n",
+       "      <td>0.2194</td>\n",
+       "      <td>0.4820</td>\n",
+       "      <td>0.5423</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -329,115 +374,17 @@
       ],
       "text/plain": [
        "                        P_10   Rprec    ndcg  recall_1000\n",
-       "training (12 topics)  0.5917  0.2626  0.5026       0.4999\n",
-       "test (9 topics)       0.4444  0.3171  0.5561       0.6852"
+       "training (12 topics)  0.4333  0.2810  0.5383       0.6650\n",
+       "test (9 topics)       0.3556  0.2194  0.4820       0.5423"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pandas.DataFrame([training_score, test_score])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results, aggregated = evaluation.evaluate(qrels_all, abcd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'gene_tie_breaker': [0.1, 0.5], 'disease_tie_breaker': [0.1, 0.5], 'query_template': ['variable.json'], 'gene_boost': [1, 2, 5], 'disease_boost': [1, 2, 5]}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
-      "{'P_10': 0.3067, 'Rprec': 0.1952, 'ndcg': 0.4139, 'recall_1000': 0.5343}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
-      "{'P_10': 0.3033, 'Rprec': 0.1852, 'ndcg': 0.4003, 'recall_1000': 0.5224}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
-      "{'P_10': 0.2933, 'Rprec': 0.181, 'ndcg': 0.3936, 'recall_1000': 0.5175}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
-      "{'P_10': 0.3, 'Rprec': 0.1853, 'ndcg': 0.3968, 'recall_1000': 0.5188}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
-      "{'P_10': 0.29, 'Rprec': 0.1804, 'ndcg': 0.389, 'recall_1000': 0.5126}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
-      "{'P_10': 0.28, 'Rprec': 0.179, 'ndcg': 0.3843, 'recall_1000': 0.5083}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
-      "{'P_10': 0.3067, 'Rprec': 0.1952, 'ndcg': 0.4139, 'recall_1000': 0.5343}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
-      "{'P_10': 0.3033, 'Rprec': 0.1852, 'ndcg': 0.4003, 'recall_1000': 0.5224}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
-      "{'P_10': 0.2933, 'Rprec': 0.181, 'ndcg': 0.3936, 'recall_1000': 0.5175}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
-      "{'P_10': 0.3, 'Rprec': 0.1853, 'ndcg': 0.3968, 'recall_1000': 0.5188}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
-      "{'P_10': 0.29, 'Rprec': 0.1804, 'ndcg': 0.389, 'recall_1000': 0.5126}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
-      "{'P_10': 0.28, 'Rprec': 0.179, 'ndcg': 0.3843, 'recall_1000': 0.5083}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
-      "{'P_10': 0.3067, 'Rprec': 0.1952, 'ndcg': 0.4139, 'recall_1000': 0.5343}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
-      "{'P_10': 0.3033, 'Rprec': 0.1852, 'ndcg': 0.4003, 'recall_1000': 0.5224}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
-      "{'P_10': 0.2933, 'Rprec': 0.181, 'ndcg': 0.3936, 'recall_1000': 0.5175}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
-      "{'P_10': 0.3, 'Rprec': 0.1853, 'ndcg': 0.3968, 'recall_1000': 0.5188}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
-      "{'P_10': 0.29, 'Rprec': 0.1804, 'ndcg': 0.389, 'recall_1000': 0.5126}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.1', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
-      "{'P_10': 0.28, 'Rprec': 0.179, 'ndcg': 0.3843, 'recall_1000': 0.5083}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
-      "{'P_10': 0.4533, 'Rprec': 0.2568, 'ndcg': 0.5154, 'recall_1000': 0.6047}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
-      "{'P_10': 0.4233, 'Rprec': 0.2306, 'ndcg': 0.4712, 'recall_1000': 0.5746}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
-      "{'P_10': 0.33, 'Rprec': 0.201, 'ndcg': 0.427, 'recall_1000': 0.5438}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '1'}\n",
-      "{'P_10': 0.4067, 'Rprec': 0.241, 'ndcg': 0.482, 'recall_1000': 0.5861}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '1'}\n",
-      "{'P_10': 0.3533, 'Rprec': 0.2113, 'ndcg': 0.4425, 'recall_1000': 0.5531}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '1'}\n",
-      "{'P_10': 0.31, 'Rprec': 0.1892, 'ndcg': 0.4083, 'recall_1000': 0.5268}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
-      "{'P_10': 0.4533, 'Rprec': 0.2568, 'ndcg': 0.5154, 'recall_1000': 0.6047}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
-      "{'P_10': 0.4233, 'Rprec': 0.2306, 'ndcg': 0.4712, 'recall_1000': 0.5746}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
-      "{'P_10': 0.33, 'Rprec': 0.201, 'ndcg': 0.427, 'recall_1000': 0.5438}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '2'}\n",
-      "{'P_10': 0.4067, 'Rprec': 0.241, 'ndcg': 0.482, 'recall_1000': 0.5861}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '2'}\n",
-      "{'P_10': 0.3533, 'Rprec': 0.2113, 'ndcg': 0.4425, 'recall_1000': 0.5531}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '2'}\n",
-      "{'P_10': 0.31, 'Rprec': 0.1892, 'ndcg': 0.4083, 'recall_1000': 0.5268}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
-      "{'P_10': 0.4533, 'Rprec': 0.2568, 'ndcg': 0.5154, 'recall_1000': 0.6047}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
-      "{'P_10': 0.4233, 'Rprec': 0.2306, 'ndcg': 0.4712, 'recall_1000': 0.5746}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.1', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
-      "{'P_10': 0.33, 'Rprec': 0.201, 'ndcg': 0.427, 'recall_1000': 0.5438}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '1', 'disease_boost': '5'}\n",
-      "{'P_10': 0.4067, 'Rprec': 0.241, 'ndcg': 0.482, 'recall_1000': 0.5861}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '2', 'disease_boost': '5'}\n",
-      "{'P_10': 0.3533, 'Rprec': 0.2113, 'ndcg': 0.4425, 'recall_1000': 0.5531}\n",
-      "RUN: FIXME TOPICS: 30 {'gene_tie_breaker': '0.5', 'disease_tie_breaker': '0.5', 'query_template': 'variable.json', 'gene_boost': '5', 'disease_boost': '5'}\n",
-      "{'P_10': 0.31, 'Rprec': 0.1892, 'ndcg': 0.4083, 'recall_1000': 0.5268}\n"
-     ]
-    }
-   ],
-   "source": [
-    "running.experiment(topics_all, qrels_all)"
    ]
   }
  ],
