--- a/python/abstracts/abstracts_recall_test.ipynb
+++ b/python/abstracts/abstracts_recall_test.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "2        male  52      aged  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,6 +248,92 @@
     "run_set = set(run[(run.TOPIC_NO==TOPIC)].ID)\n",
     "qrels_set = set(qrels[(qrels.relev.isin([2]))].doc_id)\n",
     "qrels_set.difference(run_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: ONE_RUN TOPICS: 30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'P_10': 0.4867, 'Rprec': 0.2629, 'ndcg': 0.5281, 'recall_1000': 0.6076}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "this_run_params = {\n",
+    "    'run_id':'ONE_RUN',\n",
+    "    'query_template':'variable/baseline_sex_age.json',\n",
+    "    'disease_tie_breaker':1,\n",
+    "    'disease_multi_match_type':'best_fields',\n",
+    "    'disease_boost':1,\n",
+    "    'gene_tie_breaker':0.2,\n",
+    "    'gene_multi_match_type':'best_fields',\n",
+    "    'gene_boost':2\n",
+    "}\n",
+    "\n",
+    "full_run_df, run_params = running.run(topics_all, this_run_params)\n",
+    "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
+    "aggregated\n",
+    "# Only MeSH, best fields: {'P_10': 0.5167, 'Rprec': 0.2785, 'ndcg': 0.5383, 'recall_1000': 0.6148}\n",
+    "# Only MeSH, cross fields: {'P_10': 0.5067, 'Rprec': 0.2811, 'ndcg': 0.5413, 'recall_1000': 0.6159}\n",
+    "# Only MeSH, cross, best: {'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}\n",
+    "# Only MeSH, best, cross: {'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173} ***** best ndcg, best P_10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: DEFAULT_RUN TOPICS: 30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338, 'recall_1000': 0.6139}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_params = running.get_default_run_params()\n",
+    "run_params['query_template'] = 'fixed/baseline.json'\n",
+    "full_run_df, run_params = running.run(topics_all)\n",
+    "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
+    "aggregated\n",
+    "# Only MeSH, best fields: {'P_10': 0.5167, 'Rprec': 0.2785, 'ndcg': 0.5383, 'recall_1000': 0.6148}\n",
+    "# Only MeSH, cross fields: {'P_10': 0.5067, 'Rprec': 0.2811, 'ndcg': 0.5413, 'recall_1000': 0.6159}\n",
+    "# Only MeSH, cross, best: {'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}\n",
+    "# Only MeSH, best, cross: {'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173} ***** best ndcg, best P_10"
    ]
   },
   {
