Fixed missing key in dict when running

--- a/python/abstracts/abstracts_general.ipynb
+++ b/python/abstracts/abstracts_general.ipynb
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "{'P_10': 0.52, 'Rprec': 0.2813, 'ndcg': 0.5435, 'recall_1000': 0.6196}"
+       "{'P_10': 0.52, 'Rprec': 0.2817, 'ndcg': 0.544, 'recall_1000': 0.6187}"
       ]
      },
      "execution_count": 4,
@@ -85,7 +85,7 @@
    "source": [
     "run_params = {\n",
     "    'run_id':'DEFAULT_RUN',\n",
-    "    'query_template':'fixed/baseline_sex_age.json',\n",
+    "    'query_template':'variable/baseline_sex_age.json',\n",
     "    'disease_tie_breaker':0.4,\n",
     "    'disease_multi_match_type':'best_fields',\n",
     "    'disease_boost':1.5,\n",
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EXPERIMENT BEGIN: 2018-08-01 12:14:23.751890\n",
+      "EXPERIMENT BEGIN: 2018-08-01 15:10:44.025581\n",
       "RUNS: 2\n",
       "1\n",
       "RUN: variable/baseline_sex_age.json-0.4-best_fields-1.5-0.4-cross_fields-1 TOPICS: 30\n",
@@ -124,7 +124,7 @@
       "2\n",
       "RUN: variable/baseline_sex_age.json-0.4-best_fields-1.5-0.5-cross_fields-1 TOPICS: 30\n",
       "('variable/baseline_sex_age.json', 0.5435, 0.52, 0.2813, '0.4', 'best_fields', '1.5', '0.5', 'cross_fields', '1')\n",
-      "EXPERIMENT END: 2018-08-01 12:14:57.756482\n"
+      "EXPERIMENT END: 2018-08-01 15:11:16.552100\n"
      ]
     },
     {
@@ -201,7 +201,7 @@
        "1   1.5     0.5  cross_fields      1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,34 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FIXME: Test run with default_params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUN: DEFAULT_RUN TOPICS: 12 {'run_id': 'DEFAULT_RUN', 'disease_tie_breaker': 0.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5}\n"
-     ]
-    }
-   ],
-   "source": [
-    "training_run_df, training_run_params = running.run(topics_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_results, training_aggregated = evaluation.evaluate(qrels_train, training_run_df)\n",
-    "training_score = pandas.Series(training_aggregated, name='training ' + '(' + str(len(topics_train)) + ' topics)')"
+    "## FIXME: Test run with default_params"
    ]
   },
   {
@@ -293,30 +266,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: DEFAULT_RUN TOPICS: 9 {'run_id': 'DEFAULT_RUN', 'disease_tie_breaker': 0.5, 'gene_boost': 1, 'gene_tie_breaker': 0.5, 'query_template': 'baseline.json', 'disease_boost': 1.5}\n"
+      "RUN: mugctbase1 TOPICS: 12\n"
      ]
     }
    ],
    "source": [
-    "test_run_df, test_run_params = running.run(topics_test, training_run_params)"
+    "run_params = {\n",
+    "    'run_id':'mugctbase1',\n",
+    "    'query_template':'submitted/baseline_sex_age.json',\n",
+    "}\n",
+    "\n",
+    "training_run_df, training_run_params = running.run(topics_train, 'ABSTRACTS', run_params)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_results, training_aggregated = evaluation.evaluate(qrels_train, training_run_df)\n",
+    "training_score = pandas.Series(training_aggregated, name='training ' + '(' + str(len(topics_train)) + ' topics)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUN: mugctbase1 TOPICS: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_run_df, test_run_params = running.run(topics_test, 'ABSTRACTS', training_run_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "P_10           0.4333\n",
-       "Rprec          0.2810\n",
-       "ndcg           0.5383\n",
-       "recall_1000    0.6650\n",
+       "P_10           0.4417\n",
+       "Rprec          0.2416\n",
+       "ndcg           0.5008\n",
+       "recall_1000    0.5857\n",
        "Name: training (12 topics), dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -370,17 +375,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>training (12 topics)</th>\n",
-       "      <td>0.4333</td>\n",
-       "      <td>0.2810</td>\n",
-       "      <td>0.5383</td>\n",
-       "      <td>0.6650</td>\n",
+       "      <td>0.4417</td>\n",
+       "      <td>0.2416</td>\n",
+       "      <td>0.5008</td>\n",
+       "      <td>0.5857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>test (9 topics)</th>\n",
-       "      <td>0.3556</td>\n",
-       "      <td>0.2194</td>\n",
-       "      <td>0.4820</td>\n",
-       "      <td>0.5423</td>\n",
+       "      <td>0.5556</td>\n",
+       "      <td>0.3077</td>\n",
+       "      <td>0.5622</td>\n",
+       "      <td>0.5921</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -388,11 +393,11 @@
       ],
       "text/plain": [
        "                        P_10   Rprec    ndcg  recall_1000\n",
-       "training (12 topics)  0.4333  0.2810  0.5383       0.6650\n",
-       "test (9 topics)       0.3556  0.2194  0.4820       0.5423"
+       "training (12 topics)  0.4417  0.2416  0.5008       0.5857\n",
+       "test (9 topics)       0.5556  0.3077  0.5622       0.5921"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,6 +405,13 @@
    "source": [
     "pandas.DataFrame([training_score, test_score])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
