--- a/python/abstracts/abstracts_missing.ipynb
+++ b/python/abstracts/abstracts_missing.ipynb
@@ -48,13 +48,12 @@
    "outputs": [],
    "source": [
     "topics_all = utils.get_topics('./topics/topics2017.xml')\n",
-    "qrels_all = utils.get_qrels('./gold-standard/abstracts.2017.qrels')\n",
-    "TOPIC = 2"
+    "qrels_all = utils.get_qrels('./gold-standard/abstracts.2017.qrels')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +113,13 @@
        "2        male  52      aged  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "TOPIC = 2\n",
     "topic = topics_all[(topics_all.topic==TOPIC)]\n",
     "qrels = utils.qrels_of_topics(qrels_all, topic)\n",
     "topic"
@@ -127,65 +127,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUN: FIXME TOPICS: 1 {'query_template': 'baseline.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n",
-      "RUN: FIXME TOPICS: 1 {'query_template': 'topic-optimized.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n"
+      "RUN: mugctbase1 TOPICS: 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'P_10': 0.9, 'Rprec': 0.4231, 'ndcg': 0.7551, 'recall_1000': 0.8205}"
+       "{'P_10': 0.9, 'Rprec': 0.4295, 'ndcg': 0.7504, 'recall_1000': 0.8141}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "run, params = running.run(topic)\n",
-    "params['query_template'] = 'topic-optimized.json'\n",
+    "run_params = {\n",
+    "    'run_id':'mugctbase1',\n",
+    "    'query_template':'submitted/baseline_sex_age.json',\n",
+    "}\n",
+    "\n",
+    "run, run_params = running.run(topic, 'ABSTRACTS', run_params)\n",
     "results, aggregated = evaluation.evaluate(qrels[(qrels.relev.isin([2]))], run)\n",
-    "run_this, params = running.run(topic, params)\n",
-    "aggregated"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUN: FIXME TOPICS: 1 {'query_template': 'topic-optimized.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n",
-      "RUN: FIXME TOPICS: 1 {'query_template': 'topic-optimized2.json', 'disease_boost': 1.5, 'gene_tie_breaker': 0.5, 'disease_tie_breaker': 0.5, 'gene_boost': 1}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'P_10': 0.9, 'Rprec': 0.4231, 'ndcg': 0.7231, 'recall_1000': 0.7692}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "run, params = running.run(topic)\n",
-    "params['query_template'] = 'topic-optimized2.json'\n",
-    "results, aggregated = evaluation.evaluate(qrels[(qrels.relev.isin([2]))], run)\n",
-    "run, params = running.run(topic, params)\n",
     "aggregated"
    ]
   },
@@ -198,48 +168,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'15735008',\n",
-       " '16448675',\n",
-       " '17293392',\n",
        " '17517901',\n",
        " '18097554',\n",
        " '18098337',\n",
-       " '19959686',\n",
        " '21457162',\n",
        " '21681432',\n",
-       " '22210186',\n",
+       " '22899370',\n",
        " '22972628',\n",
+       " '23015072',\n",
        " '23071293',\n",
        " '23112547',\n",
-       " '23446022',\n",
+       " '23375249',\n",
        " '23462926',\n",
        " '23763264',\n",
        " '24025253',\n",
-       " '24244575',\n",
        " '24522186',\n",
+       " '24778007',\n",
        " '24805134',\n",
        " '25073438',\n",
-       " '25386108',\n",
        " '25469291',\n",
        " '25696788',\n",
-       " '26359417',\n",
+       " '26184520',\n",
        " '26371285',\n",
        " '26623049',\n",
        " '27099668',\n",
        " 'AACR_2014-2009',\n",
-       " 'AACR_2017-3066',\n",
        " 'AACR_2017-4639',\n",
        " 'AACR_2017-5162',\n",
-       " 'ASCO_32653-65'}"
+       " 'ASCO_60628-101'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,92 +214,6 @@
     "run_set = set(run[(run.TOPIC_NO==TOPIC)].ID)\n",
     "qrels_set = set(qrels[(qrels.relev.isin([2]))].doc_id)\n",
     "qrels_set.difference(run_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUN: ONE_RUN TOPICS: 30\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'P_10': 0.4867, 'Rprec': 0.2629, 'ndcg': 0.5281, 'recall_1000': 0.6076}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "this_run_params = {\n",
-    "    'run_id':'ONE_RUN',\n",
-    "    'query_template':'variable/baseline_sex_age.json',\n",
-    "    'disease_tie_breaker':1,\n",
-    "    'disease_multi_match_type':'best_fields',\n",
-    "    'disease_boost':1,\n",
-    "    'gene_tie_breaker':0.2,\n",
-    "    'gene_multi_match_type':'best_fields',\n",
-    "    'gene_boost':2\n",
-    "}\n",
-    "\n",
-    "full_run_df, run_params = running.run(topics_all, this_run_params)\n",
-    "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
-    "aggregated\n",
-    "# Only MeSH, best fields: {'P_10': 0.5167, 'Rprec': 0.2785, 'ndcg': 0.5383, 'recall_1000': 0.6148}\n",
-    "# Only MeSH, cross fields: {'P_10': 0.5067, 'Rprec': 0.2811, 'ndcg': 0.5413, 'recall_1000': 0.6159}\n",
-    "# Only MeSH, cross, best: {'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}\n",
-    "# Only MeSH, best, cross: {'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173} ***** best ndcg, best P_10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUN: DEFAULT_RUN TOPICS: 30\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'P_10': 0.48, 'Rprec': 0.2847, 'ndcg': 0.5338, 'recall_1000': 0.6139}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "run_params = running.get_default_run_params()\n",
-    "run_params['query_template'] = 'fixed/baseline.json'\n",
-    "full_run_df, run_params = running.run(topics_all)\n",
-    "results, aggregated = evaluation.evaluate(qrels_all, full_run_df)\n",
-    "aggregated\n",
-    "# Only MeSH, best fields: {'P_10': 0.5167, 'Rprec': 0.2785, 'ndcg': 0.5383, 'recall_1000': 0.6148}\n",
-    "# Only MeSH, cross fields: {'P_10': 0.5067, 'Rprec': 0.2811, 'ndcg': 0.5413, 'recall_1000': 0.6159}\n",
-    "# Only MeSH, cross, best: {'P_10': 0.52, 'Rprec': 0.2814, 'ndcg': 0.5378, 'recall_1000': 0.6151}\n",
-    "# Only MeSH, best, cross: {'P_10': 0.52, 'Rprec': 0.2787, 'ndcg': 0.5417, 'recall_1000': 0.6173} ***** best ndcg, best P_10"
    ]
   },
   {
