--- a/python/trials/trials_general.ipynb
+++ b/python/trials/trials_general.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "{'P_10': 0.3345, 'Rprec': 0.2554, 'ndcg': 0.389, 'recall_1000': 0.4402}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "{'P_10': 0.3207, 'Rprec': 0.2538, 'ndcg': 0.3935, 'recall_1000': 0.4402}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,12 +130,12 @@
     "    'disease_tie_breaker':0.4,\n",
     "    'disease_multi_match_type':'best_fields',\n",
     "    'disease_boost':1.5,\n",
-    "    'gene_tie_breaker':0.5,\n",
+    "    'gene_tie_breaker':0.4,\n",
     "    'gene_multi_match_type':'best_fields',\n",
     "    'gene_boost':1\n",
     "}\n",
     "\n",
-    "run, params = running.run_ct(topics_all, 'TRIALS', run_params)\n",
+    "run, params = running.run(topics_all, 'TRIALS', run_params)\n",
     "results, aggregated = evaluation.evaluate(qrels_all, run)\n",
     "\n",
     "aggregated"
