simplified and organized runs in single notebook

--- a/python/abstracts/abstracts_missing.ipynb
+++ b/python/abstracts/abstracts_missing.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,36 +90,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Colon cancer</td>\n",
-       "      <td>KRAS (G13D), BRAF (V600E)</td>\n",
-       "      <td>KRAS (G13D)</td>\n",
-       "      <td>BRAF (V600E)</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Liposarcoma</td>\n",
+       "      <td>CDK4 Amplification</td>\n",
+       "      <td>CDK4 Amplification</td>\n",
+       "      <td></td>\n",
        "      <td></td>\n",
        "      <td>male</td>\n",
-       "      <td>52</td>\n",
-       "      <td>aged</td>\n",
+       "      <td>38</td>\n",
+       "      <td>adult</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   topic       disease                       gene        gene1          gene2  \\\n",
-       "2      2  Colon cancer  KRAS (G13D), BRAF (V600E)  KRAS (G13D)   BRAF (V600E)   \n",
+       "   topic      disease                gene               gene1 gene2 gene3  \\\n",
+       "1      1  Liposarcoma  CDK4 Amplification  CDK4 Amplification               \n",
        "\n",
-       "  gene3   sex age age_group  \n",
-       "2        male  52      aged  "
+       "    sex age age_group  \n",
+       "1  male  38     adult  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TOPIC = 2\n",
+    "TOPIC = 1\n",
     "topic = topics_all[(topics_all.topic==TOPIC)]\n",
     "qrels = utils.qrels_of_topics(qrels_all, topic)\n",
     "topic"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,10 +140,10 @@
     {
      "data": {
       "text/plain": [
-       "{'P_10': 0.9, 'Rprec': 0.4295, 'ndcg': 0.7504, 'recall_1000': 0.8141}"
+       "{'P_10': 0.5, 'Rprec': 0.3125, 'ndcg': 0.7419, 'recall_1000': 0.9375}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,44 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'15735008',\n",
-       " '17517901',\n",
-       " '18097554',\n",
-       " '18098337',\n",
-       " '21457162',\n",
-       " '21681432',\n",
-       " '22899370',\n",
-       " '22972628',\n",
-       " '23015072',\n",
-       " '23071293',\n",
-       " '23112547',\n",
-       " '23375249',\n",
-       " '23462926',\n",
-       " '23763264',\n",
-       " '24025253',\n",
-       " '24522186',\n",
-       " '24778007',\n",
-       " '24805134',\n",
-       " '25073438',\n",
-       " '25469291',\n",
-       " '25696788',\n",
-       " '26184520',\n",
-       " '26371285',\n",
-       " '26623049',\n",
-       " '27099668',\n",
-       " 'AACR_2014-2009',\n",
-       " 'AACR_2017-4639',\n",
-       " 'AACR_2017-5162',\n",
-       " 'ASCO_60628-101'}"
+       "{'26084847', '26573603', '26962163'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
